--- a/functions/mail-extraction/serverless.yml
+++ b/functions/mail-extraction/serverless.yml
@@ -8,7 +8,7 @@ provider:
   region: ap-northeast-2
   environment:
     OPENAI_API_KEY: ${ssm:/prod/openAI/api_key} # SSM Parameter Store에서 참조
-    EXTRACT_QUEUE_URL: 'https://sqs.ap-northeast-2.amazonaws.com/047719649915/information_integrity_verification_trigger'
+    EXTRACT_QUEUE_URL: 'https://sqs.ap-northeast-2.amazonaws.com/047719649915/information-integrity-verification-trigger'
 
   iam:
     role:
@@ -23,14 +23,14 @@ provider:
             - 'sqs:ReceiveMessage'
             - 'sqs:DeleteMessage'
           Resource:
-            - 'arn:aws:sqs:ap-northeast-2:047719649915:request_llm_trigger'
-            - 'arn:aws:sqs:ap-northeast-2:047719649915:information_integrity_verification_trigger'
+            - 'arn:aws:sqs:ap-northeast-2:047719649915:request-llm-trigger'
+            - 'arn:aws:sqs:ap-northeast-2:047719649915:information-integrity-verification-trigger'
 
 functions:
   extractEmailData:
     name: mail-extraction
     image:
-      uri: 047719649915.dkr.ecr.ap-northeast-2.amazonaws.com/mail_extraction:latest
+      uri: 047719649915.dkr.ecr.ap-northeast-2.amazonaws.com/mail-extraction:latest
     events:
       - sqs:
-          arn: arn:aws:sqs:ap-northeast-2:047719649915:request_llm_trigger
+          arn: arn:aws:sqs:ap-northeast-2:047719649915:request-llm-trigger
