--- a/functions/mail-extraction/serverless.yml
+++ b/functions/mail-extraction/serverless.yml
@@ -23,7 +23,7 @@ provider:
             - 'sqs:ReceiveMessage'
             - 'sqs:DeleteMessage'
           Resource:
-            - 'arn:aws:sqs:ap-northeast-2:047719649915:request-llm-trigger'
+            - 'arn:aws:sqs:ap-northeast-2:047719649915:mail-extraction-trigger'
             - 'arn:aws:sqs:ap-northeast-2:047719649915:information-integrity-verification-trigger'
 
 functions:
@@ -33,4 +33,4 @@ functions:
       uri: 047719649915.dkr.ecr.ap-northeast-2.amazonaws.com/mail-extraction:latest
     events:
       - sqs:
-          arn: arn:aws:sqs:ap-northeast-2:047719649915:request-llm-trigger
+          arn: arn:aws:sqs:ap-northeast-2:047719649915:mail-extraction-trigger
