--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,125 @@
-# Created by https://www.toptal.com/developers/gitignore/api/macos,windows,intellij,java,visualstudiocode,python,pycharm,react,nextjs,serverless
-# Edit at https://www.toptal.com/developers/gitignore?templates=macos,windows,intellij,java,visualstudiocode,python,pycharm,react,nextjs,serverless
+.DS_Store
+node_modules
+docs/website/_build
 
-### Intellij ###
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+.static_storage/
+.media/
+local_settings.py
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# pyenv
+.python-version
+
+# celery beat schedule file
+celerybeat-schedule
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+.pypirc
+.venv_cfn_lint
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+
+# VSCode
+.vscode
+
+# PyCharm
+.idea
+
+# Companion stack config
+integration/config/file_to_s3_map_modified.json
+
+.tmp
 
 # User-specific stuff
 .idea/**/workspace.xml
@@ -55,6 +171,7 @@ cmake-build-*/
 
 # IntelliJ
 out/
+.idea/
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
@@ -459,8 +576,6 @@ pyrightconfig.json
 logs
 **/*.backup.*
 **/*.back.*
-
-node_modules
 bower_components
 
 *.sublime*
@@ -517,5 +632,41 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+*.class
 
-# End of https://www.toptal.com/developers/gitignore/api/macos,windows,intellij,java,visualstudiocode,python,pycharm,react,nextjs,serverless
+# Package Files #
+*.jar
+*.war
+*.ear
+*.project
+*.classpath
+*.settings
+
+# Idea project files
+.idea/
+*.iml
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# output folder #
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.gradle/
+gradle/
+build/
+gradlew*
+
+# Exclude maven wrapper
+!/.mvn/wrapper/maven-wrapper.jar
+
+# SAM files
+samconfig.toml
+.aws-sam/
