--- a/functions/mail-extraction/serverless.yml
+++ b/functions/mail-extraction/serverless.yml
@@ -34,3 +34,8 @@ functions:
     events:
       - sqs:
           arn: arn:aws:sqs:ap-northeast-2:047719649915:mail-extraction-trigger
+    vpc:
+      subnetIds:
+        - ${ssm:/network/private-subnet-id}
+      securityGroupIds:
+        - ${ssm:/network/lambda-security-group-id}
