--- a/functions/information-integrity-verification/.gitignore
+++ b/functions/information-integrity-verification/.gitignore
@@ -3,6 +3,8 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+.idea
+.serverless
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
