--- a/functions/chat-app/serverless.yml
+++ b/functions/chat-app/serverless.yml
@@ -9,8 +9,8 @@ provider:
   environment:
 #    OPENAI_API_KEY:
     DOMAIN_NAME: pro3n29gzb.execute-api.${self:provider.region}.amazonaws.com
-    CHAT_SESSIONS_TABLE: ${self:service}-CustomerChatSessions
-    ORDER_DATA_TABLE: estimate
+    CHAT_SESSIONS_TABLE_NAME: ${self:service}-CustomerChatSessions
+    ORDER_DATA_TABLE_NAME: estimate
     STAGE: ${self:provider.stage}
 
   iamRoleStatements:
