Docs: 완료 핸들러 람다 등록

--- a/functions/chat-app/serverless.yml
+++ b/functions/chat-app/serverless.yml
@@ -71,6 +71,10 @@ functions:
       - websocket:
           route: sendMessage
 
+  completion:
+    name: ${self:service}-completion
+    handler: handlers/completion.handler
+
 resources:
   Resources:
     CustomerChatSessionsTable:
