--- a/functions/mail-extraction/.gitignore
+++ b/functions/mail-extraction/.gitignore
@@ -1,20 +1,42 @@
-# Distribution / packaging
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
+# Node modules
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Serverless directories
-.serverless
+.serverless/
+.webpack/
+.sst/
+
+# Logs
+*.log
+logs/
+
+# Temporary files
+*.tmp
+*.temp
+*.swp
+*.DS_Store
+Thumbs.db
+.env
+.env.*
+
+# Build output
+dist/
+build/
+coverage/
+
+# AWS credentials (should not be committed)
+.aws-sam/
+.sam/
+.vs/
+
+# IDE and Editor files
+.idea/
+.vscode/
+*.iml
+
+# Local testing
+localstack/
+.mock/
