--- a/functions/chat-app/serverless.yml
+++ b/functions/chat-app/serverless.yml
@@ -7,13 +7,12 @@ provider:
   stage: dev
 
   environment:
-    #    OPENAI_API_KEY:
-    DOMAIN_NAME: 3q2gfm3fql.execute-api.${self:provider.region}.amazonaws.com
+    DOMAIN_NAME: ${self:custom.websocketApiGatewayId}.execute-api.${self:provider.region}.amazonaws.com
     CHAT_SESSIONS_TABLE_NAME: ${self:service}-CustomerChatSessions
     ORDER_DATA_TABLE_NAME: estimate
     DISCONNECT_FUNCTION_NAME: ${self:service}-disconnect
     SQS_QUEUE_URL: https://sqs.${self:provider.region}.amazonaws.com/481665114066/chat-quotation-calculation-trigger
-    API_GATEWAY_URL: https://${self:custom.apiGatewayId}.execute-api.${self:provider.region}.amazonaws.com/${self:provider.stage}
+    LLM_API_URL: https://${self:custom.llmApiGatewayId}.execute-api.${self:provider.region}.amazonaws.com/${self:provider.stage}/llm-interaction
     STAGE: ${self:provider.stage}
 
   iamRoleStatements:
@@ -110,4 +109,5 @@ resources:
             Projection:
               ProjectionType: ALL
 custom:
-  apiGatewayId: nr2499od16
+  websocketApiGatewayId: 3q2gfm3fql
+  llmApiGatewayId: nr2499od16
