--- a/functions/mail-extraction/package.json
+++ b/functions/mail-extraction/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "aws-sdk": "^2.1692.0",
-    "uuid": "^11.0.2"
+    "uuid": "^11.0.2",
+    "xlsx": "^0.18.5"
   }
 }
