feat:websocket connect, stt develop

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,13 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "aws-amplify": "^6.8.0",
+    "axios": "^1.7.7",
+    "jwt-decode": "^4.0.0",
     "lucide": "^0.454.0",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "react-speech-recognition": "^3.10.0",
     "sass": "^1.80.6",
