--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "react-speech-recognition": "^3.10.0",
     "sass": "^1.80.6",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
