--- a/functions/chat-app/serverless.yml
+++ b/functions/chat-app/serverless.yml
@@ -12,9 +12,11 @@ provider:
     ORDER_DATA_TABLE_NAME: estimate
     DISCONNECT_FUNCTION_NAME: ${self:service}-disconnect
     DEFAULT_FUNCTION_NAME: ${self:service}-default
+    COMPLETION_FUNCTION_NAME: ${self:service}-completion
+
     CHAT_SESSIONS_TABLE_CONNECTION_INDEX: ConnectionIndex
     SQS_QUEUE_URL: https://sqs.${self:provider.region}.amazonaws.com/481665114066/chat-quotation-calculation-trigger
-    LLM_API_URL: https://${self:custom.llmApiGatewayId}.execute-api.${self:provider.region}.amazonaws.com/${self:provider.stage}/llm-interaction
+    LLM_API_URL: https://${self:custom.llmApiGatewayId}.execute-api.${self:provider.region}.amazonaws.com/${self:provider.stage}/llm-interaction-test
     STAGE: ${self:provider.stage}
 
   iamRoleStatements:
@@ -25,7 +27,7 @@ provider:
         - logs:PutLogEvents
         - logs:DescribeLogStreams
         - logs:TagResource
-      Resource: "*"
+      Resource: '*'
     - Effect: Allow
       Action:
         - dynamodb:PutItem
@@ -42,6 +44,7 @@ provider:
       Resource:
         - arn:aws:lambda:${self:provider.region}:*:function:${self:service}-disconnect
         - arn:aws:lambda:${self:provider.region}:481665114066:function:${self:service}-default
+        - arn:aws:lambda:${self:provider.region}:481665114066:function:${self:service}-completion
 
     - Effect: Allow
       Action:
@@ -78,6 +81,7 @@ functions:
 
   message:
     name: ${self:service}-message
+    timeout: 30
     handler: handlers/message.handler
     events:
       - websocket:
@@ -113,4 +117,4 @@ resources:
               ProjectionType: ALL
 custom:
   websocketApiGatewayId: 00v93zeny4
-  llmApiGatewayId: nr2499od16
+  llmApiGatewayId: pbkwbskjx5
