--- a/functions/chat-app/serverless.yml
+++ b/functions/chat-app/serverless.yml
@@ -57,6 +57,11 @@ provider:
       Resource:
         - arn:aws:sqs:${self:provider.region}:*:chat-quotation-calculation-trigger
 
+    - Effect: Allow
+      Action:
+        - translate:TranslateText
+      Resource: '*'
+
 functions:
   connect:
     name: ${self:service}-connect
