--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,13 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "aws-amplify": "^6.8.0",
+    "aws-iot-device-sdk": "^2.2.15",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.13",
     "jwt-decode": "^4.0.0",
     "lucide": "^0.454.0",
     "lucide-react": "^0.454.0",
+    "mqtt": "^5.10.1",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -57,6 +59,8 @@
     ]
   },
   "devDependencies": {
+    "@types/aws-iot-device-sdk": "^2.2.8",
+    "@types/mqtt": "^2.5.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-speech-recognition": "^3.9.5"
   }
