--- a/functions/mail-extraction/package.json
+++ b/functions/mail-extraction/package.json
@@ -1,16 +1,21 @@
 {
   "name": "mail-extraction",
   "version": "1.0.0",
-  "main": "handler.js",
+  "main": "cityMapping.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "aws-sdk": "^2.1692.0",
-    "uuid": "^11.0.2",
+    "@aws-sdk/client-s3": "^3.693.0",
+    "@aws-sdk/client-sqs": "^3.693.0",
+    "@aws-sdk/client-textract": "^3.693.0",
+    "mammoth": "^1.8.0",
+    "openai": "^4.72.0",
+    "uuid": "^11.0.3",
     "xlsx": "^0.18.5"
   }
 }
