--- a/functions/mail-extraction/package.json
+++ b/functions/mail-extraction/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/client-textract": "^3.693.0",
     "mammoth": "^1.8.0",
     "openai": "^4.72.0",
+    "pdf-parse": "^1.1.1",
     "uuid": "^11.0.3",
     "xlsx": "^0.18.5"
   }
