--- a/functions/online-learning/serverless.yml
+++ b/functions/online-learning/serverless.yml
@@ -12,14 +12,7 @@ provider:
         - Effect: 'Allow'
           Action:
             - 'sqs:SendMessage'
-          Resource: 'arn:aws:sqs:ap-northeast-2:*:dynamodb-sqs-queue'
-        - Effect: 'Allow'
-          Action:
-            - 'dynamodb:GetRecords'
-            - 'dynamodb:GetShardIterator'
-            - 'dynamodb:DescribeStream'
-            - 'dynamodb:ListStreams'
-          Resource: 'arn:aws:dynamodb:ap-northeast-2:481665114066:table/mail-db/stream/*'
+          Resource: 'arn:aws:sqs:ap-northeast-2:481665114066:dynamodb-sqs-queue'
         - Effect: 'Allow'
           Action:
             - 's3:PutObject'
@@ -27,15 +20,21 @@ provider:
             - 's3:ListBucket'
           Resource: 'arn:aws:s3:::sagemaker-ap-northeast-2-481665114066/distilkobert-onxx/*'
 
+functions:
   updateModel:
+    name: online-learning
     image: 481665114066.dkr.ecr.ap-northeast-2.amazonaws.com/online-learning:latest
+    environment:
+      S3_BUCKET: sagemaker-ap-northeast-2-481665114066
+      MODEL_PREFIX: distilkobert-classifier/
     events:
       - sqs:
           arn:
             Fn::GetAtt:
               - DynamoDBSQSQueue
               - Arn
-          batchSize: 32
+          batchSize: 32 # 처리할 메시지 개수
+          maximumBatchingWindow: 300
 
 resources:
   Resources:
@@ -43,7 +42,7 @@ resources:
       Type: AWS::SQS::Queue
       Properties:
         QueueName: dynamodb-sqs-queue
-        VisibilityTimeout: 30
+        VisibilityTimeout: 910 # Lambda Timeout (900)보다 큰 값
         MessageRetentionPeriod: 1209600
         RedrivePolicy:
           deadLetterTargetArn:
