Feat: 람다 호출 및 에러 수정
Former-commit-id: 0df5349187ddf009e0276f04e30468368425602d

--- a/functions/online-learning/serverless.yml
+++ b/functions/online-learning/serverless.yml
@@ -19,6 +19,11 @@ provider:
             - 's3:PutObject'
             - 's3:ListBucket'
           Resource: 'arn:aws:s3:::sagemaker-ap-northeast-2-481665114066/*'
+        - Effect: 'Allow'
+          Action:
+            - 'lambda:InvokeFunction'
+          Resource:
+            - 'arn:aws:lambda:ap-northeast-2:481665114066:function:distilkobert-evaluation'
 
 functions:
   updateModel:
